--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="Base" parent="@android:style/Theme.Light.NoTitleBar">
-        <item name="android:background">@android:color/white</item>
-    </style>
+<!--    <style name="Base" parent="@android:style/Theme.Light.NoTitleBar">-->
+<!--        <item name="android:background">@android:color/white</item>-->
+<!--    </style>-->
 
 </resources>
