--- a/app/src/main/res/layout/fragment_my_collection.xml
+++ b/app/src/main/res/layout/fragment_my_collection.xml
@@ -10,7 +10,7 @@
         android:layout_height="91dp"
         android:layout_marginBottom="40dp"
         android:text="KALSDASKLDLSAKN"
-        android:textColor="@color/dot_light_screen1"
+        android:textColor="@color/white"
         android:textAlignment="center"
         />
 
