--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="202dp"
         android:text="How it works?"
         android:textAlignment="center"
-        android:textColor="@color/dot_light_screen1"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -30,7 +30,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="201dp"
         android:layout_marginBottom="16dp"
-        android:textColor="@color/dot_light_screen1"
+        android:textColor="@color/white"
         android:text="Contact Us"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:layout_marginBottom="508dp"
         android:text="Instagram"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textColor="@color/dot_light_screen1"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
