--- a/app/src/main/res/layout/fragment_my_collection.xml
+++ b/app/src/main/res/layout/fragment_my_collection.xml
@@ -1,17 +1,21 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.projectpresetlightroom.fragements.MyCollection">
+    tools:context=".activities.MainActivity">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="190dp"
-        android:layout_height="91dp"
-        android:layout_marginBottom="40dp"
-        android:text="KALSDASKLDLSAKN"
-        android:textColor="@color/white"
-        android:textAlignment="center"
-        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCollection"
+        android:layout_width="415dp"
+        android:layout_height="658dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="83dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
