--- a/app/src/main/res/layout/activity_how_it_works.xml
+++ b/app/src/main/res/layout/activity_how_it_works.xml
@@ -11,6 +11,9 @@
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="-128dp">
 
@@ -24,15 +27,15 @@
             android:textSize="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.109"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.022" />
+            app:layout_constraintVertical_bias="0.008" />
 
         <TextView
             android:id="@+id/step1"
-            android:layout_width="361dp"
-            android:layout_height="37dp"
+            android:layout_width="306dp"
+            android:layout_height="35dp"
             android:fontFamily="@font/truenosbd"
             android:text="@string/step1"
             android:textColor="@color/white"
@@ -45,15 +48,15 @@
 
         <TextView
             android:id="@+id/step2"
-            android:layout_width="359dp"
-            android:layout_height="59dp"
+            android:layout_width="306dp"
+            android:layout_height="60dp"
             android:fontFamily="@font/truenosbd"
             android:text="@string/step2"
             android:textColor="@color/white"
             android:textSize="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.487"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/step1"
             app:layout_constraintVertical_bias="0.021" />
@@ -72,8 +75,8 @@
 
         <TextView
             android:id="@+id/step3"
-            android:layout_width="358dp"
-            android:layout_height="62dp"
+            android:layout_width="306dp"
+            android:layout_height="60dp"
             android:fontFamily="@font/truenosbd"
             android:text="@string/step3"
             android:textColor="@color/white"
@@ -87,7 +90,7 @@
 
         <ImageView
             android:id="@+id/gbr3"
-            android:layout_width="224dp"
+            android:layout_width="306dp"
             android:layout_height="372dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -99,15 +102,15 @@
 
         <TextView
             android:id="@+id/step4"
-            android:layout_width="344dp"
-            android:layout_height="49dp"
+            android:layout_width="306dp"
+            android:layout_height="60dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/truenosbd"
             android:text="@string/step4"
             android:textColor="@color/white"
             android:textSize="12dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.373"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gbr3" />
 
@@ -125,8 +128,8 @@
 
         <TextView
             android:id="@+id/step5"
-            android:layout_width="355dp"
-            android:layout_height="80dp"
+            android:layout_width="306dp"
+            android:layout_height="90dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="12dp"
             android:fontFamily="@font/truenosbd"
@@ -134,7 +137,7 @@
             android:textColor="@color/white"
             android:textSize="12dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gbr4" />
 
@@ -153,8 +156,8 @@
 
         <TextView
             android:id="@+id/step6"
-            android:layout_width="366dp"
-            android:layout_height="51dp"
+            android:layout_width="306dp"
+            android:layout_height="60dp"
             android:fontFamily="@font/truenosbd"
             android:text="@string/step6"
             android:textColor="@color/white"
